--- a/cliente/src/app/app.component.html
+++ b/cliente/src/app/app.component.html
@@ -15,7 +15,7 @@
           <li style="padding: 70px 0 0;">
             <!-- <a href="dashboard.html" class="waves-effect"><i class="fa fa-clock-o fa-fw" aria-hidden="true"></i>Empleado</a> -->
             <!-- <a href="dashboard.html" class="waves-effect"><i class="fa fa-user fa-fw" aria-hidden="true"></i>Empleado</a> -->
-            <a class="waves-effect" routerLink="/Empleado"><i class="fa fa-user fa-fw" aria-hidden="true"></i>Empleado</a>
+            <a class="waves-effect" routerLink="/Empleado"><i class="fa fa-user fa-fw" aria-hidden="true"></i>Empleado1212</a>
           </li>
           <li>
             <!-- <a href="profile.html" class="waves-effect"><i class="fa fa-columns fa-fw" aria-hidden="true"></i>Cargo</a> -->
