--- a/cliente/src/app/empleado/empleado.component.html
+++ b/cliente/src/app/empleado/empleado.component.html
@@ -11,9 +11,71 @@
                             <div class="row">
                                 <div class="col-md-3">
                                     <div class="form-group">
-                                        <label for="projectinput5">Nombre Empleado:</label>
-                                        <input class="form-control" name="registeredOn"
-                                            formControlName="nombre"
+                                        <label for="projectinput5">Ci:</label>
+                                        <input class="form-control" name="Primer Nombre"
+                                            formControlName="txtPrimerNombre"
+                                            type="text" required/>
+                                    </div>
+                                </div>
+                                <div class="col-md-3">
+                                    <div class="form-group">
+                                        <label for="projectinput5">Primer Nombre:</label>
+                                        <input class="form-control" name="Primer Nombre"
+                                            formControlName="txtPrimerNombre"
+                                            type="text" required/>
+                                    </div>
+                                </div>
+                                <div class="col-md-3">
+                                    <div class="form-group">
+                                        <label for="projectinput5">Segundo Nombre:</label>
+                                        <input class="form-control" name="Primer Nombre"
+                                            formControlName="txtSegundoNombre"
+                                            type="text"/>
+                                    </div>
+                                </div>
+                                <div class="col-md-3">
+                                    <div class="form-group">
+                                        <label for="projectinput5">Apellido Paterno:</label>
+                                        <input class="form-control" name="Primer Nombre"
+                                            formControlName="txtPrimerNombre"
+                                            type="text" required/>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-3">
+                                    <div class="form-group">
+                                        <label for="projectinput5">Apellido Materno:</label>
+                                        <input class="form-control" name="Primer Nombre"
+                                            formControlName="txtPrimerNombre"
+                                            type="text" required/>
+                                    </div>
+                                </div>
+                                <div class="col-md-3">
+                                    <div class="form-group">
+                                        <label for="projectinput5">Fecha de nacimiento:</label>
+                                        <input class="form-control" name="Primer Nombre"
+                                            formControlName="txtPrimerNombre"
+                                            type="date" required/>
+                                    </div>
+                                </div>
+                                <div class="col-md-3">
+                                    <div class="form-group">
+                                        <label for="projectinput5">Genero:</label>
+                                        <!-- <input class="form-control" name="Primer Nombre"
+                                            formControlName="txtPrimerNombre"
+                                            type="text" required/> -->
+                                        <select class="form-control">
+                                          <option value="">Masculino</option>
+                                          <option value="">Femenino</option>
+                                        </select>
+                                    </div>
+                                </div>
+                                <div class="col-md-3">
+                                    <div class="form-group">
+                                        <label for="projectinput5">Apellido Materno:</label>
+                                        <input class="form-control" name="Primer Nombre"
+                                            formControlName="txtPrimerNombre"
                                             type="text" required/>
                                     </div>
                                 </div>
@@ -192,7 +254,7 @@
           <!-- </div> -->
         </div>
         <!-- /.container-fluid -->
-        <!-- <footer class="footer text-center"> 2017 &copy; Ample Admin brought to you by wrappixel.com</footer> -->
+        <footer class="footer text-center"> 2017 &copy; Ample Admin brought to you by wrappixel.com</footer>
       </div>
       
       <!-- ============================================================== -->
