Anidiendo cargo y template admin

--- a/cliente/src/app/app.component.html
+++ b/cliente/src/app/app.component.html
@@ -1,17 +1,17 @@
 <app-navbar></app-navbar>
-<!-- <app-sidebar></app-sidebar> -->
+<app-sidebar></app-sidebar>
 
-<div class="navbar-default sidebar" role="navigation"   style=" background-color: #c1c2fe; ">
+<!-- <div class="navbar-default sidebar" role="navigation"   style=" background-color: #c1c2fe; ">
   <div class="sidebar-nav slimscrollsidebar">
       <ul class="nav" id="side-menu">
           <li style="padding: 70px 0 0;">
-            <a class="waves-effect" routerLink="/Empleado"><i class="fa fa-user fa-fw" aria-hidden="true"></i>Empleado1212</a>
+            <a class="waves-effect" routerLink="/Empleado"><i class="fa fa-user fa-fw" aria-hidden="true"></i>Empleado</a>
           </li>
           <li>
             <a class="waves-effect" routerLink="/Cargo"><i class="fa fa-columns fa-fw" aria-hidden="true"></i>Cargo</a>
           </li>
       </ul>
   </div>
-</div>
+</div> -->
 
 <router-outlet></router-outlet>
