--- a/cliente/src/app/sidebar/sidebar.component.html
+++ b/cliente/src/app/sidebar/sidebar.component.html
@@ -1,40 +1,79 @@
-<!-- ============================================================== -->
-<!-- Left Sidebar - style you can find in sidebar.scss  -->
-<!-- ============================================================== -->
-<div class="navbar-default sidebar" role="navigation"   style=" background-color: #c1c2fe; ">
-    <div class="sidebar-nav slimscrollsidebar">
-        <!-- <div class="sidebar-head">
-            <h3><span class="fa-fw open-close"><i class="ti-close ti-menu"></i></span> <span class="hide-menu">Navigation</span></h3>
-        </div> -->
-        <ul class="nav" id="side-menu">
-            <li style="padding: 70px 0 0;">
-                <!-- <a href="dashboard.html" class="waves-effect"><i class="fa fa-clock-o fa-fw" aria-hidden="true"></i>Empleado</a> -->
-                <a href="dashboard.html" class="waves-effect"><i class="fa fa-user fa-fw" aria-hidden="true"></i>Empleado</a>
-            </li>
-            <li>
-                <a href="profile.html" class="waves-effect"><i class="fa fa-columns fa-fw" aria-hidden="true"></i>Cargo</a>
-            </li>
-            <!-- <li>
-                <a href="basic-table.html" class="waves-effect"><i class="fa fa-table fa-fw" aria-hidden="true"></i>Basic Table</a>
-            </li>
-            <li>
-                <a href="fontawesome.html" class="waves-effect"><i class="fa fa-font fa-fw" aria-hidden="true"></i>Icons</a>
-            </li>
-            <li>
-                <a href="map-google.html" class="waves-effect"><i class="fa fa-globe fa-fw" aria-hidden="true"></i>Google
-          Map</a>
-            </li>
-            <li>
-                <a href="blank.html" class="waves-effect"><i class="fa fa-columns fa-fw" aria-hidden="true"></i>Blank Page</a>
-            </li>
-            <li>
-                <a href="404.html" class="waves-effect"><i class="fa fa-info-circle fa-fw" aria-hidden="true"></i>Error 404</a>
-            </li> -->
+<!-- Main Sidebar Container -->
+<aside class="main-sidebar sidebar-dark-primary elevation-4">
+    <!-- Brand Logo -->
+    <a href="index3.html" class="brand-link">
+      <img src="dist/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3"
+           style="opacity: .8">
+      <span class="brand-text font-weight-light">AdminLTE 3</span>
+    </a>
+
+    <!-- Sidebar -->
+    <div class="sidebar">
+      <!-- Sidebar user panel (optional) -->
+      <!-- <div class="user-panel mt-3 pb-3 mb-3 d-flex">
+        <div class="image">
+          <img src="dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
+        </div>
+        <div class="info">
+          <a href="#" class="d-block">Alexander Pierce</a>
+        </div>
+      </div> -->
+
+      <!-- Sidebar Menu -->
+      <nav class="mt-2">
+        <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
+          <!-- Add icons to the links using the .nav-icon class
+               with font-awesome or any other icon font library -->
+          <!-- <li class="nav-item has-treeview menu-open">
+            <a href="#" class="nav-link active">
+              <i class="nav-icon fas fa-tachometer-alt"></i>
+              <p>
+                Dashboard
+                <i class="right fas fa-angle-left"></i>
+              </p>
+            </a>
+            <ul class="nav nav-treeview">
+              <li class="nav-item">
+                <a href="./index.html" class="nav-link active">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>Dashboard v1</p>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a href="./index2.html" class="nav-link">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>Dashboard v2</p>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a href="./index3.html" class="nav-link">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>Dashboard v3</p>
+                </a>
+              </li>
+            </ul>
+          </li> -->
+          <li class="nav-item">
+            <a routerLink="/Empleado" class="nav-link">
+              <i class="nav-icon far fa-circle text-info"></i>
+              <p>
+                Empelado
+                <span class="right badge badge-danger">New</span>
+              </p>
+            </a>
+		  </li>
+		  <li class="nav-item">
+            <a routerLink="/Cargo" class="nav-link">
+              <i class="nav-icon far fa-circle text-danger"></i>
+              <p>
+                Cargo
+                <span class="right badge badge-warning">New</span>
+              </p>
+            </a>
+          </li>
         </ul>
-        <!-- <div class="center p-20">
-            <a href="https://wrappixel.com/templates/ampleadmin/" target="_blank" class="btn btn-danger btn-block waves-effect waves-light">Upgrade to Pro</a>
-        </div> -->
+      </nav>
+      <!-- /.sidebar-menu -->
     </div>
-</div>
-<!-- ============================================================== -->
-<!-- End Left Sidebar -->
+    <!-- /.sidebar -->
+  </aside>
