--- a/cliente/src/styles.css
+++ b/cliente/src/styles.css
@@ -1,1 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+@import '~admin-lte/plugins/fontawesome-free/css/all.min.css';
+@import '~admin-lte/plugins/sweetalert2-theme-bootstrap-4/bootstrap-4.min.css';
+@import '~admin-lte/plugins/toastr/toastr.min.css';
+@import '~admin-lte/dist/css/adminlte.min.css';
+/* @import '~admin-lte/plugins/fontawesome-free/css/all.min.css'; */
+@import '~admin-lte/plugins/tempusdominus-bootstrap-4/css/tempusdominus-bootstrap-4.min.css';
+@import '~admin-lte/plugins/icheck-bootstrap/icheck-bootstrap.min.css';
+@import '~admin-lte/plugins/jqvmap/jqvmap.min.css';
+@import '~admin-lte/plugins/overlayScrollbars/css/OverlayScrollbars.min.css';
+@import '~admin-lte/plugins/daterangepicker/daterangepicker.css';
+@import '~admin-lte/plugins/summernote/summernote-bs4.css';
