--- a/cliente/src/app/cargo/CargoHTMLRepo.html
+++ b/cliente/src/app/cargo/CargoHTMLRepo.html
@@ -104,12 +104,11 @@
                 <div class="col-md-12">
                     <div>
                         <div style="display: block">
-                            <canvas baseChart 
-                                    [datasets] = "barChartData"
-                                    [labels] = "barChartLabels"
-                                    [options] = "barChartOptions"
-                                    [legend] = "barChartLegend"
-                                    [chartType] = "barChartType"></canvas>
+                          <canvas baseChart 
+                                  [data] = "pieChartData"
+                                  [labels] = "pieChartLabels"
+                                  [chartType] = "pieChartType">
+                          </canvas>
                         </div>
                     </div>
                 </div>
